--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -84,6 +84,10 @@ small {
 ul li { list-style-type: circle; }
 ol li { list-style-type: decimal; }
 
+ul ul li { margin-left: 20px; line-height: 1.6 }
+.single-wrap ul ul { margin-top: 5px; margin-bottom: 10px }
+.single-wrap li { line-height: 1.6 }
+
 a { 
   color: $link-color; 
   &:hover {
