--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,9 @@
           {% if site.instagram %}
           <li><a target="_blank" href="https://instagram.com/{{ site.instagram }}">Instagram</a></li>
           {% endif %}
+          {% if site.facebook %}
+          <li><a target="_blank" href="https://facebook.com/{{ site.facebook }}">Facebook</a></li>
+          {% endif %}
         </ul>
       </nav>
     </div>
