--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,7 +24,7 @@
 <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/core.css">
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}">
-<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml" />
+<link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml" />
 
 {% if jekyll.environment == 'production' %}
 
