--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,8 @@
 {% endif %}
 
 <link rel="icon" href="{{ site.baseurl }}/assets/favicon.png">
+<link rel="icon" type="image/png" href="/assets/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/touch-icon.png">
 <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/core.css">
