--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 {% if page.title %}
-	<title>{{ page.title }}</title>
+	<title>{{ page.title }} · {{ site.title }}</title>
 {% else %}
 	<title>{{ site.title }}</title>
 {% endif %}
@@ -40,4 +40,8 @@
 		ga( 'send', 'pageview' );
 	</script>
 
+{% endif %}
+
+{% if site.mathjax == true %}
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 {% endif %}
