--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,8 +1,12 @@
 body {
   font-family: 'Karla', sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: normal;
+  font-style: normal;
+  color: #333333;
   padding: 20px;
   margin: 0;
-  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   @media (min-width: 992px) {
@@ -133,7 +137,7 @@ span[data-note] {
     box-sizing: border-box;
     &:hover,
     &:focus {
-      background: #f14e32;
+        background: #ce5594;
     }
     &:hover + .logo-prompt,
     &:focus + .logo-prompt {
@@ -205,7 +209,7 @@ time {
 }
 code,
 pre {
-  font-family: Consolas, monospace, x;
+  font-family: Consolas, monospace, Courier;
 }
 code {
   color: #f14e32;
@@ -281,13 +285,22 @@ article {
   }
   .footnote {
     border: 0;
+    background-color: #ef6a57;
+    color: #fff;
+    padding-left: 2px;
+    padding-right: 2px;
   }
   .footnotes {
     margin: 40px 0;
     display: none;
     .reversefootnote {
       border: 0;
+      color: #ef6a57;
     }
+  }
+  a:hover {
+      color: #ef6a57;
+      border-color: #ef6a57;
   }
 }
 .back {
