--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -46,23 +46,27 @@ blockquote {
 }
 span[data-note] {
   font-size: 0.8em;
-  background: #c1c1c1;
-  color: #fff;
-  font-weight: 700;
+  color: #ef6a57;
+  background: #fff;
+  font-weight: 400;
   display: inline-block;
-  padding: 0 12px;
-  vertical-align: middle;
-  line-height: 18px;
+  padding: 0 1px 2px 5px;
+  vertical-align: super;
+  line-height: 15px;
   cursor: pointer;
-  margin: 0 2px;
+  margin: 0;
   transition: background 0.3s;
   -webkit-transition: background 0.3s;
   -webkit-user-select: none;
+  border-radius: 10px;
+
   &.open {
     background: #838383;
   }
   @media (min-width: 768px) {
-    vertical-align: 1px;
+      *:not(span[data-note]){
+          vertical-align: 1px;
+      }
   }
   @media (min-width: 992px) {&:hover {
       background: #838383;
