:station: clearer h1 headings

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -13,6 +13,16 @@ body {
     padding: 35px 50px;
   }
 }
+h1 {
+    border-bottom: 1px solid #dbdfe4;
+    padding-bottom: 10px;
+    font-size: 1.6em;
+}
+
+h2 {
+    font-size: 1.4em;
+}
+
 h2,
 h3,
 h4,
