--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
 <link rel="icon" type="image/png" href="/assets/favicon-16x16.png" sizes="16x16" />
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/assets/touch-icon.png">
 <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/core.css">
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml" />
