--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Karla', sans-serif;
+  font-family: "Lora",Georgia,serif;
   font-size: 14px;
   line-height: 20px;
   font-weight: normal;
