--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -17,6 +17,7 @@ h1 {
     border-bottom: 1px solid #dbdfe4;
     padding-bottom: 10px;
     font-size: 1.6em;
+    font-family: "Open Sans";
 }
 
 h2 {
